# dymem

./: Untitled.ipynb  draw.py  generate_compressor_dataset.py  main.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
data/scripts/: gen_sft_niah_data.py
data/scripts/sft/: gen_sft_doc_data.py
eval/: eval_lm_harness.py  eval_ruler.py  metrics.py  pred_ruler.py  run_benchmarks.py
examples/apps/: gradio_chat.py
examples/deepspeed/: ds_z2_offload_config.json  ds_z3_offload_config.json
examples/scripts/: MV.txt  QA1.txt  S3-3k.txt  S3.txt  debug.sh  dy_inference.py  dy_inference_qwen.py  eval_lm.py  inference.py  test1.txt  test2.txt  test3.txt  test4.txt  train.py  train_qwen2.5_3b_ahn_gdn.sh  visualize_mem_attn.py
examples/scripts/sft/: qwen2_dymem_sft.py
examples/scripts/train/: debugger.py  train.py  train_signal.py  untils.py
examples/scripts/utils/: merge_weights.py  model_compare.py  rename_sd.py  split_weights.py
src/: train.py
src/ahn/: utils.py
src/ahn/rnn/: __init__.py  delta_net.py  gated_deltanet.py  mamba2.py
src/ahn/transformer/qwen2/: modeling_qwen2.py
src/ahn/transformer/qwen2_ahn/: __init__.py  qwen2_ahn.py
src/dymem/: utils.py
src/dymem/rnn/: __init__.py  mamba2.py
src/dymem/transformer/qwen2/: modeling_qwen2.py
src/dymem/transformer/qwen2_ahn/: qwen2_ahn.py
src/dymem/transformer/qwen2_dymem/: __init__.py  qwen2_dymem-backup.py  qwen2_dymem.py  qwen2_dymem_new.py  qwen2_dymem_new2.py
