[project]
name = "dymem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "deepspeed>=0.18.0",
    "evaluate>=0.4.6",
    "flash-attn",
    "huggingface-hub>=0.35.3",
    "jieba>=0.42.1",
    "llamafactory>=0.8.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dymem*"]
namespaces = true

[tool.uv.workspace]
members = [
    "dymem",
]

[tool.uv.sources]
flash-attn = { path = "flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
